--- a/DevTool/Properties/Resources.resx
+++ b/DevTool/Properties/Resources.resx
@@ -120,21 +120,15 @@
   <data name="MSG001" xml:space="preserve">
     <value>Save settings success!</value>
   </data>
-  <data name="TitleError" xml:space="preserve">
-    <value>Error</value>
-  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="AppIcon_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\AppIcon_48.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="trans_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Images\trans-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="speak" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\speak.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="TranslateLanguageFileName" xml:space="preserve">
     <value>translate_out_tts.mp3</value>
-  </data>
-  <data name="AppIcon_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\AppIcon_128.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="minimize_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Images\minimize_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -149,24 +143,33 @@
   <data name="TranslationTime" xml:space="preserve">
     <value>Translated in {0} seconds</value>
   </data>
+  <data name="UrlTranslate" xml:space="preserve">
+    <value>https://translate.google.com/?hl=en&amp;ie=UTF8&amp;text={0}&amp;sl={1}&amp;tl={2}https://translate.google.com/?hl=en&amp;ie=UTF8&amp;text={0}&amp;sl={1}&amp;tl={2}&amp;pc=0&amp;sc=1</value>
+    <comment>Connect translation url</comment>
+  </data>
   <data name="btnTran" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Images\btnTran.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="close_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Images\close_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="UrlTranslate" xml:space="preserve">
-    <value>https://translate.google.com/?hl=en&amp;ie=UTF8&amp;text={0}&amp;sl={1}&amp;tl={2}https://translate.google.com/?hl=en&amp;ie=UTF8&amp;text={0}&amp;sl={1}&amp;tl={2}&amp;pc=0&amp;sc=1</value>
-    <comment>Connect translation url</comment>
+  <data name="AppIcon_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\AppIcon_128.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="AppIcon_256" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Images\AppIcon_256.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="home_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\home_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="SourceLanguageFileName" xml:space="preserve">
     <value>translate_in_tts.mp3</value>
   </data>
-  <data name="AppIcon_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\AppIcon_48.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="logo_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\logo_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TitleError" xml:space="preserve">
+    <value>Error</value>
   </data>
   <data name="ERR001" xml:space="preserve">
     <value>Cannot find the translation for this text. Try it on the website?</value>
@@ -178,10 +181,10 @@
     <value>https://translate.googleapis.com/translate_a/single?client=gtx&amp;sl={0}&amp;tl={1}&amp;dt=t&amp;q={2}</value>
     <comment>Get file of translation</comment>
   </data>
-  <data name="home_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\home_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="speak" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\speak.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="logo_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Assets\Images\logo_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="info_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Images\info_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
