--- a/DevTool/Properties/Resources.resx
+++ b/DevTool/Properties/Resources.resx
@@ -187,4 +187,13 @@
   <data name="info_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Images\info_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="WAN001" xml:space="preserve">
+    <value>A program running on this computer</value>
+  </data>
+  <data name="AppName" xml:space="preserve">
+    <value>Dev Tool</value>
+  </data>
+  <data name="Error001" xml:space="preserve">
+    <value>Cannot get settings. Restore default settings</value>
+  </data>
 </root>
